Update README with usage instructions and fix HTML bugs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <div class="col span_4_of_14" >
                 <div id="parent">
-                    <div id="child"><a href-"asdads">THE LEAGUE</a></div>
+                    <div id="child"><a href="#">THE LEAGUE</a></div>
                 </div>
             </div>
 
@@ -107,7 +107,7 @@
 
             <div class="col span_4_of_14" >
                 <div id="parent">
-                    <div id="child"><a href="about.html">ABOUT</div>
+                    <div id="child"><a href="about.html">ABOUT</a></div>
                 </div>
             </div>
 
