--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="author" content="Durban @ 2015">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
