--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Kick Off 2 - Welcome home">
     <meta name="author" content="Durban @ 2015">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -114,7 +114,7 @@
             <div class="nocol span_1_of_14"></div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
