Update script path to use scripts folder

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="nocol span_1_of_14"></div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
 
